extension: added support for tmdb

--- a/chrome-extension/modal.html
+++ b/chrome-extension/modal.html
@@ -2,15 +2,13 @@
   <div class="movie_card" id="bright">
     <div class="info_section">
       <div class="movie_header">
-        <img class="locandina"
-          src="https://movieplayer.net-cdn.it/t/images/2017/12/20/bright_jpg_191x283_crop_q85.jpg" />
-        <h1>Bright</h1>
-        <h4>2017, David Ayer</h4>
-        <span class="minutes">117 min</span>
-        <p class="type">Action, Crime, Fantasy</p>
+        <img id="poster" class="locandina"/>
+        <h1 id="title"></h1>
+        <span id="runtime" class="minutes"></span>
+        <p id="genres" class="type"></p>
       </div>
       <div class="movie_desc">
-        <p class="text">
+        <p id="overview" class="text">
           Set in a world where fantasy creatures live side by side with humans. A human cop is forced to work with
           an Orc to find a weapon everyone is prepared to kill for.
         </p>
